# Master_Thesis

./: .gitattributes  .gitignore  DNN_pipeline.py  DOPAMINE.py  DataAllCreater.py  DataAllCreater_part1.py  DataAllCreater_part2.py  Dataset_preprocess.py  Dataset_preprocess_EVAL.py  Dataset_preprocess_EVAL_10d.py  Dataset_preprocess_EVAL_2d.py  Dataset_preprocess_EVAL_v2.py  Dataset_preprocess_TRAIN.py  Dataset_preprocess_TRAIN_10d_esm.py  Dataset_preprocess_TRAIN_2d.py  Dataset_preprocess_TRAIN_v2.py  Dataset_preprocess_v2.py  Dataset_preprocess_v3.py  DomainFinder.py  ESM_Embedder.py  ESM_Embeddings_HP_search.py  ESM_Embeddings_HP_search_MAX.py  FinalTrainer.py  FirstTry.ipynb  FirstTry.py  HPsearch.py  Predicter.py  Predicter_for_ESM.py  Predicter_for_Eval.py  Predicter_for_normal_usage.py  README.md  Testrunner.py  TestsetCreater.py  importh5.py  main.py  main_DataCreation.py  pyproject.toml
Master_Thesis.git/: config
logs/run_2025_02_24-20_19_38/train/: events.out.tfevents.1740424778.StevensPC.67599.0.v2
logs/run_2025_02_24-20_23_43/train/: events.out.tfevents.1740425023.StevensPC.67599.1.v2
logs/run_2025_02_24-20_28_08/train/: events.out.tfevents.1740425288.StevensPC.68346.0.v2
logs/run_2025_02_24-20_29_43/train/: events.out.tfevents.1740425383.StevensPC.68346.1.v2
logs/run_2025_02_25-11_22_12/train/: events.out.tfevents.1740478932.StevensPC.5687.0.v2
logs/run_2025_02_25-11_23_35/train/: events.out.tfevents.1740479015.StevensPC.5687.1.v2
logs/run_2025_02_25-11_26_08/train/: events.out.tfevents.1740479168.StevensPC.6389.0.v2
logs/run_2025_02_25-11_31_44/train/: events.out.tfevents.1740479504.StevensPC.6956.0.v2
logs/run_2025_02_25-11_37_35/train/: events.out.tfevents.1740479855.StevensPC.7531.0.v2
logs/run_2025_02_25-11_37_58/train/: events.out.tfevents.1740479878.StevensPC.7531.1.v2
oldScripts/: DataAllCreater_part1.py  DataAllCreater_part2.py  Dataset_preprocess_EVAL.py  Dataset_preprocess_EVAL_10d.py  Dataset_preprocess_EVAL_2d.py  Dataset_preprocess_TRAIN.py  Dataset_preprocess_TRAIN_10d_esm.py  Dataset_preprocess_TRAIN_2d.py  Dataset_preprocess_TRAIN_2d_esm.py  ESM_Embeddings_HP_search_MAX.py  FinalTrainer.py  HPsearch.py  HPsearch_RNN.py  Predicter_for_ESM_recovered_11.06.py  Predicter_for_Eval.py  Predicter_for_normal_usage.py  main_DataCreation.py  old_main.py
sideScripts/: BigClasserEvalCreater.py  Combiner.py  CutBoundaryPlotter.py  Dataset_preprocess.py  DomainLengthGetter.py  EvalCreaterALL.py  LengthHistoPlotter.py  Plotter.py  Plotter2.py  PlotterBoundary.py  RandomAASeqGenerator.py  RepeatDist.py  csv_to_fasta.py  csv_to_parquet.py  fasta_to_csv.py  h5deleter.py  importh5.py  tf.dataset_to_csv.py
(+32 files in other folders)
