[project]
name = "masterthesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fair-esm>=2.0.0",
    "lightning>=2.5.1.post0",
    "optuna>=4.4.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "tensorboard>=2.19.0",
    "tensorboardx>=2.6.4",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
optuna = { index = "pypi" }

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
default = true
