[project]
name = "masterthesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "bio>=1.8.0",
    "ete3>=3.1.3",
    "fair-esm>=2.0.0",
    "fairscale>=0.4.13",
    "lightning>=2.5.1.post0",
    "lxml>=5.4.0",
    "matplotlib>=3.10.3",
    "optuna>=4.4.0",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "polars>=1.30.0",
    "psutil>=7.0.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "tensorboardx>=2.6.4",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "uv>=0.7.13",
    "xmltodict>=0.14.2",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
optuna = { index = "pypi" }

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
default = true
